fix BA close not showing on mobile

--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -87,10 +87,6 @@
     width: 100vw;
   }
 
-  .close-button {
-    visibility: hidden;
-  }
-
   .marker-info-slide,
   .box-approval-slide {
     width: 100vw !important;
